--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   vertical_percent_indicator: ^0.0.1
   firebase_database: ^10.5.0
   percent_indicator: ^4.2.3
+  image_picker: ^1.1.0
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
